# ME495_Embedded-Systems-in-Robotics

./: README.md
homework01/: README.md  inspection.md  mover
homework01/my_turtle/: CMakeLists.txt  package.xml
homework01/my_turtle/config/: waypoints.yaml
homework01/my_turtle/launch/: waypoint_follow.launch
homework01/my_turtle/msg/: TurtleVel.msg
homework01/my_turtle/nodes/: turtle_interpret  waypoint
homework01/my_turtle/srv/: VelTranslate.srv
homework02/homework2/: CMakeLists.txt  README.md  package.xml
homework02/homework2/config/: arm.yaml  trajectory.yaml
homework02/homework2/nodes/: arm_marker  arm_traj  trajectory
homework02/homework2/rviz/: motion_with_markers.rviz  motion_without_markers.rviz  turtle_view.rviz  two_arm_motion_with_markers.rviz
homework02/homework2/src/homework2/: homework2.py
homework02/homework2/src/homework2.egg-info/: PKG-INFO  SOURCES.txt
homework02/homework2/test/: test.py
homework02/homework2/urdf/: robotarm.urdf  robotarm.urdf.xacro
homework03/diff_drive/: CMakeLists.txt  README.md  package.xml
homework03/diff_drive/config/: ddrive.rviz  ddrive.yaml  ddrive_odom_config.rviz
homework03/diff_drive/launch/: ddrive.launch  ddrive_rviz.launch
homework03/diff_drive/nodes/: flip  follow_rect
homework03/diff_drive/urdf/: ddrive.gazebo  ddrive.xacro  ddrive.xacro.urdf
homework03/diff_drive/worlds/: ddrive.sdf  ddrive.world
homework04/: .gitignore  CMakeLists.txt  README.md  package.xml
homework04/config/: start_slam_rviz.config.rviz
homework04/launch/: nav_stack.launch  part6.launch  slam_stack.launch  start_slam.launch
homework04/maps/: expl.pgm  expl.yaml  expl_actual.pgm  expl_actual.yaml  map.yaml  navstack_real.pgm  navstack_real.yaml  part5_real.pgm  part5_real.yaml
homework04/nodes/: nav_node
homework04/rviz/: start_slam.rviz
