<?xml version="1.0"?>
<package format="2">
  <name>homework4</name>
  <version>1.2.3</version>
  <description>
    roslaunch scripts for starting the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <maintainer email="anujkarnik2021@northwestern.edu">Anuj</maintainer>
  <url type="website">https://github.com</url>
  
  <depend>std_msgs</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>catkin</build_export_depend>
  
  <exec_depend>turtlebot3_description</exec_depend>
  <exec_depend>turtlebot3_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>turtlebot3_navigation</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>map_server</exec_depend>

</package>
